--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.3.1
 
-
+  firebase_core: ^1.12.0
+  firebase_database: ^9.0.6
+  cloud_firestore: ^3.1.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
